new version, warmup

--- a/MGM/MGM/Web.config
+++ b/MGM/MGM/Web.config
@@ -52,6 +52,9 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
+    <applicationInitialization>
+      <add initializationPage="Timer.ashx"/>
+    </applicationInitialization>
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
