--- a/MGM/MGM/Web.config
+++ b/MGM/MGM/Web.config
@@ -52,9 +52,9 @@
     </assemblyBinding>
   </runtime>
   <system.webServer>
-    <applicationInitialization>
+    <!--<applicationInitialization>
       <add initializationPage="Timer.ashx"/>
-    </applicationInitialization>
+    </applicationInitialization>-->
     <validation validateIntegratedModeConfiguration="false" />
     <modules>
       <remove name="ApplicationInsightsWebTracking" />
